# PrusaSlicer

./: .codespellrc  .gitignore  BuildLib64.bat  BuildLinux.sh  BuildMacOS.sh  BuildmacOS.sh  CMakeLists.txt  Creality Halot Mage Pro  Jenkinsfile  Jenkinstest  README.md  build_win.bat  comp.bat  compLib64.bat  env.bat  init.bat  jenkinsfile_SCM  meson.build  meson_options.txt  ps-build.bat  vcpkg.json  version.inc
resources/: meson.build
resources/calibration/: introduction.html
resources/calibration/bed_leveling/: bed_leveling.html
resources/calibration/cube/: cube.html
resources/calibration/filament_temp/: Smart_compact_temperature_calibration_item.3mf  Temperature calibration.3mf  filament_temp.html  t180.3mf  t185.3mf  t190.3mf  t195.3mf  t200.3mf  t205.3mf  t210.3mf  t215.3mf  t220.3mf  t225.3mf  t230.3mf  t235.3mf  t240.3mf  t245.3mf  t250.3mf  t255.3mf  t260.3mf  t265.3mf  t270.3mf  t275.3mf  t280.3mf  t285.3mf  to_break.3mf
resources/data/: hints.ini
resources/icons/: OverlayIconLicenses.md
resources/localization/: LINGUAS  PrusaSlicer.pot  list.txt  meson.build
resources/localization/ca/: PrusaSlicer.mo  PrusaSlicer_ca.po
resources/localization/cs/: PrusaSlicer_cs.po
resources/localization/de/: PrusaSlicer.mo  PrusaSlicer_de.po  SliCR-3D V2_de.po
resources/localization/de_DE/: Slic3rPE.mo  Slic3rPE_de.po
resources/localization/en/: PrusaSlicer_en.po
resources/profiles/: Anker.ini  AnkerMake.idx  Anycubic.idx  Anycubic.ini  Artillery.ini  BIBO.ini  CR3D.idx  CR3D.ini  Caribou.idx  Caribou.ini  CommonFilaments.ini  Creality.idx  Creality.ini  Elegoo.ini  FLSun.idx  FLSun.ini  GEEETech.ini  Geeetech.ini  Infinity3D.idx  Infinity3D.ini  LNL3D.idx  LNL3D.ini  MakerGear.ini  PrusaResearch.ini  RatRig.idx  RatRig.ini  Rigid3D.ini  Snapmaker.ini  Templates.ini  Trimaker.ini  common.0.0.1.ini  common.0.0.2.ini  gCreate.ini  template.ini
resources/shaders/: gouraud.vs  gouraud_light.vs  gouraud_light_instanced.vs  mm_gouraud.fs  toolpaths_lines.fs  variable_layer_height.vs
resources/shapes/: 28PC01881_bottle_cap_negative.stl
sandboxes/clipper_experiments/: CMakeLists.txt  ClipperExperiments.cpp
sandboxes/opencsg/: meson.build
src/: CMakeLists.txt  PrusaSlicer.cpp  PrusaSlicer.hpp  meson.build  slic3r.cpp  slic3r_generated_config.h.in
src/Shiny/: meson.build
src/admesh/: connect.cpp  meson.build  normals.cpp  stlinit.cpp
src/avrdude/: avrdude-slic3r.conf.h  libavrdude.h  main.c  meson.build
src/boost/: meson.build
src/build-utils/: meson.build
src/clipper/: clipper.cpp  clipper.hpp  meson.build
src/downloader/: CMakeLists.txt  Download.cpp  Download.hpp  Downloader.cpp  Downloader.hpp  DownloaderApp.cpp  DownloaderApp.hpp  FileGet.cpp  FileGet.hpp  InstanceSend.cpp  InstanceSend.hpp  InstanceSendMac.h  InstanceSendMac.mm
src/glu-libtess/: meson.build
src/hidapi/: CMakeLists.txt  meson.build
src/imgui/: imconfig.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp  meson.build
src/libigl/: CMakeLists.txt  meson.build
src/libnest2d/: meson.build
src/libslic3r/: AABBTreeIndirect.hpp  AppConfig.cpp  AppConfig.hpp  Arrange.cpp  Arrange.hpp  BoundingBox.hpp  Brim.cpp  BuildVolume.cpp  BuildVolume.hpp  CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.hpp  Color.hpp  Config.cpp  Config.hpp  CutSurface.cpp  CutSurface.hpp  CutUtils.cpp  ElephantFootCompensation.cpp  Emboss.cpp  Emboss.hpp  ExPolygon.hpp  ExtrusionEntity.cpp  ExtrusionEntity.hpp  FDMSupportSpots.cpp  FDMSupportSpots.hpp  Flow.cpp  Flow.hpp  GCode.cpp  GCode.hpp  GCodeReader.cpp  GCodeSender.cpp  GCodeTimeEstimator.cpp  GCodeTimeEstimator.hpp  GCodeWriter.cpp  GCodeWriter.hpp  Geometry.cpp  Geometry.hpp  Int128.hpp  JumpPointSearch.cpp  (+67 more)
src/mesh_fix/: CMakeLists.txt
src/miniz/: meson.build
src/nanosvg/: CMakeLists.txt  README-prusa.txt  nanosvg.cpp  nanosvg.h  nanosvgrast.h
src/platform/: meson.build
src/poly2tri/: meson.build
src/polypartition/: meson.build
src/qhull/: meson.build
src/semver/: meson.build
src/slic3r/: CMakeLists.txt  meson.build
src/stb_dxt/: stb_dxt.h
subprojects/avrdude/: meson.build
subprojects/libnest2d/: meson.build
tests/: CMakeLists.txt  catch_main.hpp  meson.build
tests/arrange/: test_arrange.cpp  test_arrange_integration.cpp
tests/catch2/: catch.hpp
tests/fff_print/: CMakeLists.txt  test_avoid_crossing_perimeters.cpp  test_bridges.cpp  test_clipper.cpp  test_cooling.cpp  test_custom_gcode.cpp  test_data.cpp  test_extrusion_entity.cpp  test_fill.cpp  test_flow.cpp  test_gaps.cpp  test_gcode.cpp  test_gcodefindreplace.cpp  test_gcodewriter.cpp  test_model.cpp  test_multi.cpp  test_perimeters.cpp  test_print.cpp  test_printgcode.cpp  test_printobject.cpp  test_printtemps.cpp  test_shells.cpp  test_skirt_brim.cpp  test_support_material.cpp  test_thin_walls.cpp  test_trianglemesh.cpp
tests/libnest2d/: meson.build
tests/libslic3r/: CMakeLists.txt  test_3mf.cpp  test_ShapeDiameterFunction.cpp  test_aabbindirect.cpp  test_anyptr.cpp  test_arachne.cpp  test_astar.cpp  test_clipper_offset.cpp  test_clipper_utils.cpp  test_color.cpp  test_config.cpp  test_curve_fitting.cpp  test_cut_surface.cpp  test_emboss-backup.cpp  test_emboss.cpp  test_expolygon.cpp  test_geometry.cpp  test_indexed_triangle_set.cpp  test_jump_point_search.cpp  test_kdtreeindirect.cpp  test_marchingsquares.cpp  test_meshboolean.cpp  test_mutable_priority_queue.cpp  test_optimizers.cpp  test_placeholder_parser.cpp  test_png_io.cpp  test_point.cpp  test_polygon.cpp  test_polyline.cpp  test_quadric_edge_collapse.cpp  test_region_expansion.cpp  test_surface_mesh.cpp  test_triangulation.cpp  test_utils.cpp  test_voronoi.cpp
tests/sla_print/: CMakeLists.txt  sla_archive_readwrite_tests.cpp  sla_print_tests.cpp  sla_raycast_tests.cpp  sla_supptgen_tests.cpp  sla_supptreeutils_tests.cpp  sla_test_utils.cpp  sla_test_utils.hpp  sla_voronoi_graph_tests.cpp
tests/slic3rutils/: slic3r_arrangejob_tests.cpp  slic3r_jobs_tests.cpp  slic3r_version_tests.cpp
xs/: CMakeLists.txt  template.xs.in
xs/xsp/: GUI_3DScene.xsp  Print.xsp
(+594 files in other folders)
