subdir('localization')

install_subdir('fonts',     install_dir: resources_dir)
install_subdir('icons',     install_dir: resources_dir)
install_subdir('profiles',  install_dir: resources_dir)
install_subdir('shaders',   install_dir: resources_dir)
install_subdir('udev',      install_dir: resources_dir)
